<resources>
    <string name="app_name">MiPlanilla</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_crear_planilla">CrearPlanillaActivity</string>
    <string name="lbl_concepto">Concepto</string>
    <string name="lbl_planilla_image">imagen Planilla</string>
    <string name="lbl_fecha">Fecha</string>
    <string name="lbl_total">Total Salario</string>
    <string name="btn_guardar_planilla">Guardar Planilla</string>
    <string name="lbl_iv_warning">Warning</string>
    <string name="lbl_tv_warning">Warning</string>
    <string name="lbl_image_pla">Imagen Planilla</string>
    <string name="action_delete_all">Borrar Todo</string>
    <string name="title_create_planilla">Crear Planilla</string>
    <string name="title_update_planilla">Actualizar Planilla</string>
    <string name="delete_dialog_title">Confirmar Acción</string>
    <string name="delete_all_dialog_message">¿Desea eliminar todos las Planillas?</string>
    <string name="delete_dialog_message">¿Desea eliminar la planilla seleccionada?</string>
    <string name="ok">Si</string>
    <string name="cancel">Cancelar</string>
    <string name="mensaje_creacion_planilla">Planilla %1$s Creada</string>
    <string name="mensaje_eliminacion_planilla">Planilla Borrada</string>
    <string name="mensaje_eliminar_todo">Todos las Planillas han sido eliminadas</string>
    <string name="mensaje_mod_planilla">Planilla %1$s modificada</string>
    <string name="lbl_menu_eliminar_planilla">Eliminar Planilla</string>
</resources>